developed Auth controller
