# api/app/Http/Controllers/AuthController.php
@@ -2,41 +2,55 @@
 
 namespace App\Http\Controllers;
 
-use Illuminate\Http\Request;
+use App\Http\Requests\LoginRequest;
+use Carbon\Carbon;
+use Illuminate\Support\Facades\RateLimiter;
 
 class AuthController extends Controller
 {
-     /**
-     * Remove the specified resource from storage.
-     */
-    public function login(Request $request)
+
+    public function login(LoginRequest $request)
     {
-        // $credentials = request(['email', 'password']);
+        $type = $request->input('type'); // email or phone
 
-        // if (! $token = auth()->claims(['foo' => 'bar'])->attempt($credentials)) {
-        //     return response()->json(['error' => 'Unauthorized'], 401);
-        // }
+        $executed = RateLimiter::attempt('login:' . $request->ip, $maxAttempts = 5, function () {}, $decaySeconds = 300, $perMinute = 2);
 
-        // return $this->respondWithToken($token);
+        if (!$executed) {
+            return response()->json(['message' => __('errors.toManyAttempts')], 429);
+        }
+
+        $credentials = $request->only([$type, 'password']);
+
+        if (!$token = auth()->claims(['type' => 'password'])->attempt($credentials))
+            return response()->json(['message' => __('errors.login.incorrect.' . $type)], 400);
+
+        return $this->respondWithToken($token);
     }
 
-    /**
-     * Refresh a token.
-     *
-     * @return \Illuminate\Http\JsonResponse
-     */
+    public function me()
+    {
+        return response()->json(auth()->user());
+    }
+
+
     public function refresh()
     {
-        // return $this->respondWithToken(auth()->refresh());
+        return $this->respondWithToken(auth()->refresh());
     }
 
-     /**
-     * Log the user out (Invalidate the token).
-     *
-     * @return \Illuminate\Http\JsonResponse
-     */
+
     public function logout()
     {
-        // auth()->logout();
+        auth()->logout(true);
+
+        return response()->json(['message' => 'Successfully logged out']);
+    }
+
+    protected function respondWithToken($token)
+    {
+        $ttl = auth()->factory()->getTTL() * 60;
+        $expires_at = Carbon::now()->addSeconds($ttl)->toString();
+
+        return response()->json(compact('token', 'expires_at'));
     }
 }
