# api/public/swagger/apis.json
@@ -28,13 +28,17 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "type": {
+                    "type": "string",
+                    "description": "is email or phone"
+                  },
                   "email": {
                     "type": "string",
-                    "description": "required if phone be null"
+                    "description": "required if type be email"
                   },
                   "phone": {
                     "type": "string",
-                    "description": "required if email be null"
+                    "description": "required if type be phone"
                   },
                   "password": {
                     "type": "string"
@@ -60,7 +64,7 @@
                     "token": {
                       "type": "string"
                     },
-                    "expired_date": {
+                    "expires_in": {
                       "type": "string"
                     }
                   }
@@ -83,6 +87,41 @@
         }
       }
     },
+    "/auth/me": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "token": {
+                      "type": "string"
+                    },
+                    "expires_at": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/auth/refresh": {
       "post": {
         "tags": [
@@ -99,7 +138,7 @@
                     "token": {
                       "type": "string"
                     },
-                    "expired_date": {
+                    "expires_at": {
                       "type": "string"
                     }
                   }
@@ -113,7 +152,7 @@
         },
         "security": [
           {
-            "api_key": []
+            "bearerAuth": []
           }
         ]
       }
@@ -134,7 +173,7 @@
                     "token": {
                       "type": "string"
                     },
-                    "expired_date": {
+                    "expires_at": {
                       "type": "string"
                     }
                   }
@@ -145,9 +184,19 @@
         },
         "security": [
           {
-            "api_key": []
+            "bearerAuth": []
           }
         ]
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "apiKey",
+        "in": "header",
+        "name": "Authorization",
+        "description": "Token-based authentication with required prefix \"Token\""
       }
     }
   }
