# api/routes/api.php
@@ -1,8 +1,11 @@
 <?php
 
-use Illuminate\Http\Request;
+use App\Http\Controllers\AuthController;
 use Illuminate\Support\Facades\Route;
 
-Route::get('/user', function (Request $request) {
-    return $request->user();
+Route::controller(AuthController::class)->middleware('auth:api')->prefix('auth')->group(function () {
+    Route::post('login', 'login')->withoutMiddleware('auth:api');
+    Route::post('me', 'me');
+    Route::post('refresh', 'refresh');
+    Route::post('logout', 'logout');
 });
